# BookStore

./: .gitignore  DockerFile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  views.py
.circleci/: config.yml
.github/workflows/: build.yml
BookStore/: Makefile  settings.py  urls.py  views.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/tests/test_viewset/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: urls.py
product/migrations/: 0001_initial.py
product/serializers/: category_serializer.py
product/viewsets/: product_viewset.py
