[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Victor Lucas Santos Gonzaga <victorlucas.santos124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
factory-boy = "^3.3.0"
django = "^5.0.8"
djangorestframework = "^3.15.1"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.3.0"
psycopg = "^3.1"  # Substituir psycopg2 por psycopg
whitenoise = "^6.7.0"
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
